Fix 'ar' invocation when cross-compiling and in 64-bit mode on AIX.
Reported by Benedikt Morbach <bmorbach@redhat.com>
at <https://savannah.gnu.org/bugs/?43037>.

* gettext-runtime/m4/intl.m4 (AM_INTL_SUBDIR): Require gl_PROG_AR_RANLIB if
available. Otherwise, use AC_PROG_RANLIB and set AR and ARFLAGS.
* gettext-runtime/intl/Makefile.in (AR): Use the value determined through
autoconf.
(ARFLAGS): New variable.
(libintl.a, libgnuintl.a): Use it.
* gettext-runtime/configure.ac: Invoke gl_PROG_AR_RANLIB.
* gettext-runtime/libasprintf/configure.ac: Likewise.
* gettext-tools/configure.ac: Likewise.

--- a/gettext-runtime/intl/Makefile.in
+++ b/gettext-runtime/intl/Makefile.in
@@ -64,7 +64,8 @@ mkdir_p = @mkdir_p@
 
 l = @INTL_LIBTOOL_SUFFIX_PREFIX@
 
-AR = ar
+AR = @AR@
+ARFLAGS = @ARFLAGS@
 CC = @CC@
 LIBTOOL = @LIBTOOL@
 RANLIB = @RANLIB@
@@ -221,7 +222,7 @@ all-no-no:
 
 libintl.a libgnuintl.a: $(OBJECTS)
 	$(AM_V_at)rm -f $@
-	$(AM_V_AR)$(AR) cru $@ $(OBJECTS)
+	$(AM_V_AR)$(AR) $(ARFLAGS) $@ $(OBJECTS)
 	$(AM_V_at)$(RANLIB) $@
 
 libintl.la libgnuintl.la: $(OBJECTS) $(OBJECTS_RES_@WOE32@)
