--- a/gettext-runtime/libasprintf/configure.ac
+++ b/gettext-runtime/libasprintf/configure.ac
@@ -1,5 +1,5 @@
 dnl Configuration for the GNU libasprintf library
-dnl Copyright (C) 2002-2011, 2015-2016 Free Software Foundation, Inc.
+dnl Copyright (C) 2002-2011, 2015-2016, 2018 Free Software Foundation, Inc.
 dnl
 dnl This program is free software: you can redistribute it and/or modify
 dnl it under the terms of the GNU General Public License as published by
@@ -34,6 +34,9 @@ AC_CANONICAL_HOST
 dnl Checks for compiler output filename suffixes.
 AC_OBJEXT
 AC_EXEEXT
+
+dnl For a 64-bit build on AIX, AC_PROG_RANLIB is not sufficient.
+gl_PROG_AR_RANLIB
 
 dnl Early checks, assembled by gnulib.
 gl_EARLY
