--- a/gettext-tools/configure.ac
+++ b/gettext-tools/configure.ac
@@ -1,5 +1,5 @@
 dnl Configuration for the gettext-tools directory of GNU gettext
-dnl Copyright (C) 1995-2011, 2015-2017 Free Software Foundation, Inc.
+dnl Copyright (C) 1995-2011, 2015-2018 Free Software Foundation, Inc.
 dnl
 dnl This program is free software: you can redistribute it and/or modify
 dnl it under the terms of the GNU General Public License as published by
@@ -73,6 +73,9 @@ AC_CANONICAL_HOST
 dnl Checks for compiler output filename suffixes.
 AC_OBJEXT
 AC_EXEEXT
+
+dnl For a 64-bit build on AIX, AC_PROG_RANLIB is not sufficient.
+gl_PROG_AR_RANLIB
 
 dnl Make sure we see all GNU and Solaris extensions.
 gl_EARLY
