--- a/gettext-runtime/intl/Makefile.in
+++ b/gettext-runtime/intl/Makefile.in
@@ -207,7 +207,7 @@ config.charset locale.alias ref-add.sin ref-del.sin export.h libintl.rc \
 $(HEADERS) $(SOURCES)
 DISTFILES.generated = plural.c
 DISTFILES.normal = VERSION
-DISTFILES.gettext = ChangeLog COPYING.LIB libintl.glibc README.windows
+DISTFILES.gettext = ChangeLog COPYING.LIB INSTALL.windows libintl.glibc
 DISTFILES.obsolete = xopen-msg.sed linux-msg.sed po2tbl.sed.in cat-compat.c \
 COPYING.LIB-2 COPYING.LIB-2.0 COPYING.LIB-2.1 \
 gettext.h libgettext.h plural-eval.c libgnuintl.h \
