--- a/gettext-runtime/libasprintf/Makefile.am
+++ b/gettext-runtime/libasprintf/Makefile.am
@@ -1,5 +1,5 @@
 ## Makefile for the gettext-runtime/libasprintf subdirectory of GNU gettext
-## Copyright (C) 2002-2007, 2009-2010, 2015-2016 Free Software Foundation, Inc.
+## Copyright (C) 2002-2007, 2009-2010, 2015-2016, 2018 Free Software Foundation, Inc.
 ##
 ## This program is free software: you can redistribute it and/or modify
 ## it under the terms of the GNU Lesser General Public License as published by
@@ -174,4 +174,4 @@ EXTRA_DIST += texi2html autosprintf_all.html
 
 # Windows support.
 
-EXTRA_DIST += README.windows
+EXTRA_DIST += INSTALL.windows
