--- a/gettext-runtime/src/gettext.sh.in
+++ b/gettext-runtime/src/gettext.sh.in
@@ -1,6 +1,6 @@
 #! /bin/sh
 #
-# Copyright (C) 2003, 2005-2007, 2011, 2015-2016 Free Software Foundation, Inc.
+# Copyright (C) 2003, 2005-2007, 2011, 2015-2018 Free Software Foundation, Inc.
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU Lesser General Public License as published by
@@ -62,7 +62,7 @@ if test -z "${ZSH_VERSION+set}"; then
       {
         echo "$progname (GNU $package) $version"
         echo "Copyright (C) 2003-2007 Free Software Foundation, Inc.
-License GPLv2+: GNU GPL version 2 or later <http://gnu.org/licenses/gpl.html>
+License GPLv2+: GNU GPL version 2 or later <https://gnu.org/licenses/gpl.html>
 This is free software: you are free to change and redistribute it.
 There is NO WARRANTY, to the extent permitted by law."
         echo "Written by" "Bruno Haible"
