all: Replace more http and ftp URLs by https URLs.
* autogen.sh: Use https: URLs.
* gettext-runtime/doc/nls.texi (Translating Teams, Available Packages): Likewise.
* gettext-tools/doc/gettext.texi: Likewise.
* gettext-tools/doc/FAQ.html: Likewise.
* gettext-tools/doc/tutorial.html: Likewise.
* gettext-tools/misc/gettextize.in: Likewise.
* gettext-tools/projects/GNOME/team-address: Likewise.
* gettext-tools/projects/GNOME/teams.url: Likewise.
* gettext-tools/projects/KDE/team-address: Likewise.
* gettext-tools/projects/KDE/teams.url: Likewise.
* gettext-tools/projects/TP/teams.url: Likewise.
* gettext-tools/src/x-python.c: Likewise.
* gettext-tools/tests/xgettext-its-1: Likewise.

--- a/gettext-tools/configure.ac
+++ b/gettext-tools/configure.ac
@@ -330,9 +330,9 @@ AC_ARG_WITH([xz],
   [gt_use_xz=maybe])
 # The CVS format is deprecated, because "cvs init" does not work in all
 # circumstances
-# (see <http://lists.gnu.org/archive/html/bug-cvs/2010-05/msg00003.html>)
+# (see <https://lists.gnu.org/archive/html/bug-cvs/2010-05/msg00003.html>)
 # and we are not allowed to distribute the cvs infrastructure files ourselves
-# (see <http://lists.gnu.org/archive/html/bug-cvs/2010-06/msg00011.html>).
+# (see <https://lists.gnu.org/archive/html/bug-cvs/2010-06/msg00011.html>).
 #
 # With the archive from version 0.18.1, we can observe the following
 # compression rates:
