--- a/gettext-tools/misc/autopoint.in
+++ b/gettext-tools/misc/autopoint.in
@@ -533,10 +533,10 @@ case "@ARCHIVE_FORMAT@" in
     #
     # But the CVS format is now deprecated, because "cvs init" does not work in
     # all circumstances
-    # (see <http://lists.gnu.org/archive/html/bug-cvs/2010-05/msg00003.html>)
+    # (see <https://lists.gnu.org/archive/html/bug-cvs/2010-05/msg00003.html>)
     # and we are not allowed to distribute the cvs infrastructure files
     # ourselves
-    # (see <http://lists.gnu.org/archive/html/bug-cvs/2010-06/msg00011.html>).
+    # (see <https://lists.gnu.org/archive/html/bug-cvs/2010-06/msg00011.html>).
     #
     # Check availability of the CVS program.
     (cvs -v) >/dev/null 2>/dev/null || func_fatal_error "cvs program not found"
