--- a/gettext-tools/misc/gettextize.in
+++ b/gettext-tools/misc/gettextize.in
@@ -1333,10 +1333,10 @@ if test -f "$srcdir/$auxdir"config.guess && test -f "$srcdir/$auxdir"config.sub;
 else
   please="$please
 You will also need config.guess and config.sub, which you can get from the CVS
-of the 'config' project at http://savannah.gnu.org/. The commands to fetch them
+of the 'config' project at https://savannah.gnu.org/. The commands to fetch them
 are
-\$ wget 'http://savannah.gnu.org/cgi-bin/viewcvs/*checkout*/config/config/config.guess'
-\$ wget 'http://savannah.gnu.org/cgi-bin/viewcvs/*checkout*/config/config/config.sub'
+\$ wget 'https://savannah.gnu.org/cgi-bin/viewcvs/*checkout*/config/config/config.guess'
+\$ wget 'https://savannah.gnu.org/cgi-bin/viewcvs/*checkout*/config/config/config.sub'
 "
 fi
 
