--- a/gettext-runtime/intl/Makefile.in
+++ b/gettext-runtime/intl/Makefile.in
@@ -203,7 +203,7 @@ OBJECTS = \
 OBJECTS_RES_yes = libintl.res.$lo
 OBJECTS_RES_no =
 DISTFILES.common = Makefile.in \
-config.charset locale.alias ref-add.sin ref-del.sin export.h libintl.rc \
+locale.alias ref-add.sin ref-del.sin export.h libintl.rc \
 $(HEADERS) $(SOURCES)
 DISTFILES.generated = plural.c
 DISTFILES.normal = VERSION
@@ -215,7 +215,7 @@ libgnuintl.h_vms Makefile.vms libgnuintl.h.msvc-static \
 libgnuintl.h.msvc-shared Makefile.msvc
 
 all: all-@USE_INCLUDED_LIBINTL@
-all-yes: libintl.$la libintl.h charset.alias ref-add.sed ref-del.sed
+all-yes: libintl.$la libintl.h ref-add.sed ref-del.sed
 all-no: all-no-@BUILD_INCLUDED_LIBINTL@
 all-no-yes: libgnuintl.$la
 all-no-no:
@@ -385,10 +385,6 @@ libintl.h: $(srcdir)/libgnuintl.in.h
 	    -e 's,@''HAVE_WPRINTF''@,@HAVE_WPRINTF@,g' \
 	  < $(srcdir)/libgnuintl.in.h > libintl.h
 
-charset.alias: $(srcdir)/config.charset
-	$(SHELL) $(srcdir)/config.charset '@host@' > t-$@
-	mv t-$@ $@
-
 check: all
 
 # We must not install the libintl.h/libintl.a files if we are on a
@@ -427,36 +423,6 @@ install-exec: all
 	  : ; \
 	fi
 	if test '@USE_INCLUDED_LIBINTL@' = yes; then \
-	  if test @GLIBC21@ = no; then \
-	    case '@host_os@' in \
-	      darwin[56]*) \
-	        need_charset_alias=true ;; \
-	      darwin* | cygwin* | mingw* | pw32* | cegcc*) \
-	        need_charset_alias=false ;; \
-	      *) \
-	        need_charset_alias=true ;; \
-	    esac; \
-	  else \
-	    need_charset_alias=false; \
-	  fi; \
-	  if $$need_charset_alias; then \
-	    $(mkdir_p) $(DESTDIR)$(libdir); \
-	  fi; \
-	  temp=$(DESTDIR)$(libdir)/t-charset.alias; \
-	  dest=$(DESTDIR)$(libdir)/charset.alias; \
-	  if test -f $(DESTDIR)$(libdir)/charset.alias; then \
-	    orig=$(DESTDIR)$(libdir)/charset.alias; \
-	    sed -f ref-add.sed $$orig > $$temp; \
-	    $(INSTALL_DATA) $$temp $$dest; \
-	    rm -f $$temp; \
-	  else \
-	    if $$need_charset_alias; then \
-	      orig=charset.alias; \
-	      sed -f ref-add.sed $$orig > $$temp; \
-	      $(INSTALL_DATA) $$temp $$dest; \
-	      rm -f $$temp; \
-	    fi; \
-	  fi; \
 	  $(mkdir_p) $(DESTDIR)$(localedir); \
 	  test -f $(DESTDIR)$(localedir)/locale.alias \
 	    && orig=$(DESTDIR)$(localedir)/locale.alias \
@@ -478,7 +444,6 @@ install-data: all
 	    $(INSTALL_DATA) $(srcdir)/$$file \
 			    $(DESTDIR)$(gettextsrcdir)/$$file; \
 	  done; \
-	  chmod a+x $(DESTDIR)$(gettextsrcdir)/config.charset; \
 	  dists="$(DISTFILES.generated)"; \
 	  for file in $$dists; do \
 	    if test -f $$file; then dir=.; else dir=$(srcdir); fi; \
@@ -512,21 +477,6 @@ installdirs:
 	  : ; \
 	fi
 	if test '@USE_INCLUDED_LIBINTL@' = yes; then \
-	  if test @GLIBC21@ = no; then \
-	    case '@host_os@' in \
-	      darwin[56]*) \
-	        need_charset_alias=true ;; \
-	      darwin* | cygwin* | mingw* | pw32* | cegcc*) \
-	        need_charset_alias=false ;; \
-	      *) \
-	        need_charset_alias=true ;; \
-	    esac; \
-	  else \
-	    need_charset_alias=false; \
-	  fi; \
-	  if $$need_charset_alias; then \
-	    $(mkdir_p) $(DESTDIR)$(libdir); \
-	  fi; \
 	  $(mkdir_p) $(DESTDIR)$(localedir); \
 	else \
 	  : ; \
@@ -557,17 +507,6 @@ uninstall:
 	  : ; \
 	fi
 	if test '@USE_INCLUDED_LIBINTL@' = yes; then \
-	  if test -f $(DESTDIR)$(libdir)/charset.alias; then \
-	    temp=$(DESTDIR)$(libdir)/t-charset.alias; \
-	    dest=$(DESTDIR)$(libdir)/charset.alias; \
-	    sed -f ref-del.sed $$dest > $$temp; \
-	    if grep '^# Packages using this file: $$' $$temp > /dev/null; then \
-	      rm -f $$dest; \
-	    else \
-	      $(INSTALL_DATA) $$temp $$dest; \
-	    fi; \
-	    rm -f $$temp; \
-	  fi; \
 	  if test -f $(DESTDIR)$(localedir)/locale.alias; then \
 	    temp=$(DESTDIR)$(localedir)/t-locale.alias; \
 	    dest=$(DESTDIR)$(localedir)/locale.alias; \
@@ -627,7 +566,7 @@ ID: $(HEADERS) $(SOURCES)
 
 mostlyclean:
 	rm -f *.a *.la *.o *.obj *.lo core core.*
-	rm -f libgnuintl.h libintl.h charset.alias ref-add.sed ref-del.sed
+	rm -f libgnuintl.h libintl.h ref-add.sed ref-del.sed
 	rm -f -r .libs _libs
 	rm -f pluralx.c
 
