examples: hello-pascal: Update.
* gettext-tools/examples/hello-pascal/configure.ac (PPC): Test for ppcx64 if
ppc386 is not found.
* gettext-tools/examples/hello-pascal/hello.rst: Remove file.
* gettext-tools/examples/hello-pascal/Makefile.am: hello.rsj replaces hello.rst.
(SUBDIRS): Proceed in current directory before recursing into po/.
* gettext-tools/examples/hello-pascal/po/Makefile.am (POTFILES): hello.rsj
replaces hello.rst.
* gettext-tools/examples/hello-pascal/autoclean.sh: Remove hello.rsj.

--- a/gettext-tools/examples/hello-pascal/configure.ac
+++ b/gettext-tools/examples/hello-pascal/configure.ac
@@ -8,9 +8,9 @@ AC_CONFIG_SRCDIR(hello.pas)
 AM_INIT_AUTOMAKE(hello-pascal, 0)
 
 dnl Check for availability of the Free Pascal Compiler.
-AC_PATH_PROG(PPC, ppc386)
+AC_PATH_PROGS(PPC, ppc386 ppcx64)
 if test -z "$PPC"; then
-  echo "*** Essential program ppc386 not found" 1>&2
+  echo "*** Essential program ppc386 or ppcx64 not found" 1>&2
   exit 1
 fi
 AC_SUBST(PPC)
