--- a/gettext-tools/examples/hello-pascal/po/Makefile.am
+++ b/gettext-tools/examples/hello-pascal/po/Makefile.am
@@ -5,7 +5,7 @@
 
 # List of files which contain translatable strings.
 POTFILES = \
-  hello.rst
+  hello.rsj
 
 # Usually the message domain is the same as the package name.
 DOMAIN = $(PACKAGE)
