examples: hello-pascal: Fix 'make maintainer-clean'.
* gettext-tools/examples/hello-pascal/Makefile.am (MAINTAINERCLEANFILES): New
variable.

--- a/gettext-tools/examples/hello-pascal/Makefile.am
+++ b/gettext-tools/examples/hello-pascal/Makefile.am
@@ -43,3 +43,5 @@ EXTRA_DIST += hello.rsj
 
 # The list of auxiliary files generated during the compilation.
 CLEANFILES = hello.o hello$(EXEEXT)
+
+MAINTAINERCLEANFILES = hello.rsj
