examples: hello-objc-gnustep: Fix 'make distclean'.
* gettext-tools/examples/hello-objc-gnustep/GNUmakefile (internal-distclean):
Remove the *.lproj directories.
* gettext-tools/examples/hello-objc-gnustep/po/GNUmakefile (internal-clean):
Remove remove-potcdate.sed.

--- a/gettext-tools/examples/hello-objc-gnustep/po/GNUmakefile
+++ b/gettext-tools/examples/hello-objc-gnustep/po/GNUmakefile
@@ -158,6 +158,9 @@ $(POFILES): $(DOMAIN).pot
 	  $(MAKE) $${lang}.po-create; \
 	fi
 
+internal-clean::
+	rm -f remove-potcdate.sed
+
 update-po:
 	$(MAKE) $(DOMAIN).pot-update
 	test -z "$(UPDATEPOFILES)" || $(MAKE) $(UPDATEPOFILES)
