examples: hello-pascal: Fix 'make dist'.
* gettext-tools/examples/hello-pascal/Makefile.am (EXTRA_DIST): Add the source
file.

--- a/gettext-tools/examples/hello-pascal/Makefile.am
+++ b/gettext-tools/examples/hello-pascal/Makefile.am
@@ -21,6 +21,10 @@ EXTRA_DIST = autogen.sh autoclean.sh
 
 # ---------------- General rules for compiling Pascal programs ----------------
 
+EXTRA_DIST += $(hello_SOURCES)
+
+# Rules for compiling Pascal programs.
+
 all-local: hello$(EXEEXT)
 
 # How to build the 'hello' program.
