examples: hello-tcl*: Fix runtime error.
* gettext-tools/examples/hello-tcl*/configure.ac: Ensure pkgdatadir is an
absolute file name without variable references.

--- a/gettext-tools/examples/hello-tcl-tk/configure.ac
+++ b/gettext-tools/examples/hello-tcl-tk/configure.ac
@@ -24,7 +24,13 @@ else
 fi
 save_prefix="$prefix"
 prefix="$final_prefix"
-eval "pkgdatadir=\"${datadir}/${PACKAGE}\""
+save_datarootdir="$datarootdir"
+eval "datarootdir=\"${datarootdir}\""
+save_datadir="$datadir"
+eval "datadir=\"${datadir}\""
+pkgdatadir="${datadir}/${PACKAGE}"
+datadir="$save_datadir"
+datarootdir="$save_datarootdir"
 prefix="$save_prefix"
 AC_SUBST(pkgdatadir)
 
