examples: Add a script for checking against mistakes.
* gettext-tools/examples/check-examples: New file.
* gettext-tools/examples/HACKING: New file.
* gettext-tools/examples/Makefile.am (EXTRA_DIST): Add them.
* Admin/release-steps: Mention check-examples.

--- a/gettext-tools/examples/Makefile.am
+++ b/gettext-tools/examples/Makefile.am
@@ -19,7 +19,9 @@
 AUTOMAKE_OPTIONS = 1.2 foreign
 ACLOCAL_AMFLAGS = -I ../../gettext-runtime/m4 -I ../../m4
 SUBDIRS = po
-EXTRA_DIST =
+EXTRA_DIST = \
+  HACKING \
+  check-examples
 
 examplesdir = $(docdir)/examples
 
