examples: hello-csharp*: Improve 'make maintainer-clean'.
* gettext-tools/examples/hello-csharp*/po/Makefile.am (MAINTAINERCLEANFILES):
Don't list the $(RESOURCESDLLFILES) here.
(maintainer-clean-local): Instead, remove them and their parent directories
here.

--- a/gettext-tools/examples/hello-csharp-forms/po/Makefile.am
+++ b/gettext-tools/examples/hello-csharp-forms/po/Makefile.am
@@ -216,7 +216,15 @@ MOSTLYCLEANFILES += remove-potcdate.sed
 MOSTLYCLEANFILES += stamp-poT
 MOSTLYCLEANFILES += core core.* *.stackdump $(DOMAIN).po $(DOMAIN).1po $(DOMAIN).2po *.new.po
 
-MAINTAINERCLEANFILES = stamp-po $(RESOURCESDLLFILES)
+MAINTAINERCLEANFILES = stamp-po
+maintainer-clean-local:
+	if test -n "$(RESOURCESDLLFILES)"; then \
+	  for file in $(RESOURCESDLLFILES); do \
+	    rm -f "$$file"; \
+	    dir=`echo "$$file" | sed -e 's,/[^/]*$$,,'`; \
+	    if test -d "$$dir"; then rmdir "$$dir"; fi; \
+	  done; \
+	fi
 
 EXTRA_DIST = remove-potcdate.sin LINGUAS $(POFILES) $(RESOURCESDLLFILES)
 
