examples: Modernize configure.ac.
* gettext-tools/examples/hello-*/configure.ac: Use the recommended AC_INIT and
AM_INIT_AUTOMAKE syntax. Require automake >= 1.11.

--- a/gettext-tools/examples/hello-tcl-tk/configure.ac
+++ b/gettext-tools/examples/hello-tcl-tk/configure.ac
@@ -3,9 +3,9 @@ dnl This file is in the public domain.
 dnl
 dnl Configuration file - processed by autoconf.
 
-AC_INIT
-AC_CONFIG_SRCDIR(hello.tcl)
-AM_INIT_AUTOMAKE(hello-tcl-tk, 0)
+AC_INIT([hello-tcl-tk], [0])
+AC_CONFIG_SRCDIR([hello.tcl])
+AM_INIT_AUTOMAKE([1.11])
 
 dnl Check for availability of the Tcl/Tk interpreter.
 AC_PATH_PROG(WISH, wish)
