--- a/gettext-tools/examples/hello-c-gnome/configure.ac
+++ b/gettext-tools/examples/hello-c-gnome/configure.ac
@@ -3,9 +3,9 @@ dnl This file is in the public domain.
 dnl
 dnl Configuration file - processed by autoconf.
 
-AC_INIT
-AC_CONFIG_SRCDIR(hello.c)
-AM_INIT_AUTOMAKE(hello-c-gnome, 0)
+AC_INIT([hello-c-gnome], [0])
+AC_CONFIG_SRCDIR([hello.c])
+AM_INIT_AUTOMAKE([1.11])
 
 AC_PROG_CC
 GNOME_INIT
