--- a/gettext-tools/examples/hello-tcl/configure.ac
+++ b/gettext-tools/examples/hello-tcl/configure.ac
@@ -3,9 +3,9 @@ dnl This file is in the public domain.
 dnl
 dnl Configuration file - processed by autoconf.
 
-AC_INIT
-AC_CONFIG_SRCDIR(hello.tcl)
-AM_INIT_AUTOMAKE(hello-tcl, 0)
+AC_INIT([hello-tcl], [0])
+AC_CONFIG_SRCDIR([hello.tcl])
+AM_INIT_AUTOMAKE([1.11])
 
 dnl Check for availability of the Tcl interpreter.
 AC_PATH_PROG(TCLSH, tclsh)
