New test intl-1.
* gettext-tools/tests/intl-1: New file.
* gettext-tools/tests/intl-1-prg.c: New file.
* gettext-tools/tests/intl-1.po: New file.
* gettext-tools/tests/Makefile.am: Update.

--- a/.gitignore
+++ b/.gitignore
@@ -671,6 +671,8 @@ autom4te.cache/
 /gettext-tools/tests/gettext-8-prg.exe
 /gettext-tools/tests/gettextpo-1-prg
 /gettext-tools/tests/gettextpo-1-prg.exe
+/gettext-tools/tests/intl-1-prg
+/gettext-tools/tests/intl-1-prg.exe
 /gettext-tools/tests/intl-setlocale-1-prg
 /gettext-tools/tests/intl-setlocale-1-prg.exe
 /gettext-tools/tests/sentence-1-prg
